feat: move from externalId to hashes
